# CI-rust

./: .gitmodules  Cargo.toml  README.md  local_envs
bash_scripts/: .commit_id  TestResults.txt  run_or_fail.sh  test_runner.sh  update_repo.sh
src/bash_scripts/: run_or_fail.sh  update_repo.sh
src/dispatcher/: dispatcher.rs  dispatcher_lib.rs
src/lib/: common.rs  dispatcher_lib.rs  repo_observer_lib.rs  test_runner_lib.rs
src/repo_observer/: lib.rs  repo_observer.rs  repo_observer_lib.rs
src/test_runner/: test_runner.rs
